- added Travis CI automatic testing configuration
- use pkgutil-style namespace declaration
- package cleanup (``.gitignore``, ``MANIFEST.in``, ``README.rst``)
- docs cleanup (``Makefile``, ``conf.py``)
- tests cleanup (``tox.ini``, ``.travis.yml``)
- remove unsupported documentation bits
- fix coverage tests to only test this package
- remove coveralls from the Travis CI configuration


1.5 (2012-04-20)
----------------
- Factored the ``dataflake.ldapconnection.tests.fakeldap`` module
  into a separate package ``dataflake.fakeldap``

- Restricted the supported Python versions to 2.6 and 2.7.

- removed old test_suite fossils


1.4 (2012-04-03)
----------------
- Added a simple tox configuration to quickly test with different 
  Python versions. As a result of successful testing, re-declare 
  compatibility with Python 2.4 and 2.5.

- Moved the documentation build dependencies into a setup extra so 
  building them without buildout becomes easier.

- Added setup.py aliases for creating a testing sandbox and the 
  documentation dependencies, and use them in the buildout 
  configuration.

- Extended ``fakeldap.RaisingFakeLDAPConnection`` to accept a list
  of exceptions to raise. On each call to the method that is set 
  to raise the exception, the first item in the exception list 
  is removed and raised. This allows testing code areas nested in 
  more than one ``try/except`` clause.


1.3 (2012-03-23)
----------------
- Update bootstrap.py to what ships with zc.buildout 1.5.2

- fakeldap: Add email characters and some non-ASCII characters to
  FLTR_RE, to be able to use them in searches. (Stefan Holek)

- fakeldap: Add unbind_s API. (Stefan Holek)

- fakeldap: Deep-copy entries before returning them. (Stefan Holek)

- fakeldap: Only return requested attributes. (Stefan Holek)

- fakeldap: Optionally disable password hashing. (Stefan Holek)

- fakeldap: Optionally maintain the 'memberOf' attribute of group
  members. (Stefan Holek)
