@@ -14,8 +14,7 @@
 """
 
 from dataflake.ldapconnection.tests.base import LDAPConnectionTests
-from dataflake.ldapconnection.tests.dummy import ISO_8859_1_ENCODED
-from dataflake.ldapconnection.tests.dummy import ISO_8859_1_UTF8
+from dataflake.ldapconnection.tests.dummy import UNENCODED_LATIN1
 
 
 class ConnectionDeleteTests(LDAPConnectionTests):
@@ -32,9 +31,11 @@ class ConnectionDeleteTests(LDAPConnectionTests):
 
     def test_delete_authentication(self):
         self._addRecord('cn=foo,dc=localhost')
-        conn = self._makeSimple()
-        bind_dn_apiencoded = 'cn=%s,dc=localhost' % ISO_8859_1_ENCODED
-        bind_dn_serverencoded = 'cn=%s,dc=localhost' % ISO_8859_1_UTF8
+        conn = self._makeOne('host', 636, 'ldap', self._factory,
+                             api_encoding='iso-8859-1')
+        bind_dn = u'cn=%s,dc=localhost' % UNENCODED_LATIN1
+        bind_dn_apiencoded = bind_dn.encode('iso-8859-1')
+        bind_dn_serverencoded = bind_dn.encode('UTF-8')
         self._addRecord(bind_dn_serverencoded, userPassword='foo')
         conn.delete('cn=foo,dc=localhost', bind_dn=bind_dn_apiencoded,
                     bind_pwd='foo')
