@@ -14,8 +14,7 @@
 """
 
 from dataflake.ldapconnection.tests.base import LDAPConnectionTests
-from dataflake.ldapconnection.tests.dummy import ISO_8859_1_ENCODED
-from dataflake.ldapconnection.tests.dummy import ISO_8859_1_UTF8
+from dataflake.ldapconnection.tests.dummy import UNENCODED_LATIN1
 
 
 class ConnectionSearchTests(LDAPConnectionTests):
@@ -30,9 +29,11 @@ class ConnectionSearchTests(LDAPConnectionTests):
         self.assertEqual(bindpwd, '')
 
     def test_search_authentication(self):
-        conn = self._makeSimple()
-        bind_dn_apiencoded = 'cn=%s,dc=localhost' % ISO_8859_1_ENCODED
-        bind_dn_serverencoded = 'cn=%s,dc=localhost' % ISO_8859_1_UTF8
+        conn = self._makeOne('host', 636, 'ldap', self._factory,
+                             api_encoding='iso-8859-1')
+        bind_dn = u'cn=%s,dc=localhost' % UNENCODED_LATIN1
+        bind_dn_apiencoded = bind_dn.encode('iso-8859-1')
+        bind_dn_serverencoded = bind_dn.encode('UTF-8')
         self._addRecord(bind_dn_serverencoded, userPassword='foo')
         conn.search('dc=localhost', 'scope',
                     bind_dn=bind_dn_apiencoded, bind_pwd='foo')
@@ -56,6 +57,7 @@ class ConnectionSearchTests(LDAPConnectionTests):
 
     def test_search_nonascii(self):
         conn = self._makeSimple()
+        ISO_8859_1_ENCODED = UNENCODED_LATIN1.encode('iso-8859-1')
         attrs = {'a': [ISO_8859_1_ENCODED], 'b': ISO_8859_1_ENCODED}
         conn.insert('dc=localhost', 'cn=foo', attrs=attrs)
         response = conn.search('dc=localhost', fltr='(cn=foo)')
